--- a/examples/browser-tracing-example/package.json
+++ b/examples/browser-tracing-example/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@opentelemetry/context-zone": "^1.0.0",
     "@opentelemetry/sdk-trace-base": "^1.0.0",
     "@opentelemetry/sdk-trace-web": "^1.0.0"
   }
