--- a/examples/browser-tracing-example/package.json
+++ b/examples/browser-tracing-example/package.json
@@ -3,9 +3,12 @@
     "start": "concurrently \"spago build --watch\" \"parcel index.html\""
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.0.3",
     "@opentelemetry/context-zone": "^1.0.0",
     "@opentelemetry/instrumentation": "^0.26.0",
+    "@opentelemetry/instrumentation-document-load": "^0.26.0",
     "@opentelemetry/instrumentation-fetch": "^0.26.0",
+    "@opentelemetry/instrumentation-user-interaction": "^0.26.0",
     "@opentelemetry/sdk-trace-base": "^1.0.0",
     "@opentelemetry/sdk-trace-web": "^1.0.0",
     "output": "^0.0.0"
