--- a/examples/browser-tracing-example/package.json
+++ b/examples/browser-tracing-example/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "@opentelemetry/api": "^1.0.3",
     "@opentelemetry/context-zone": "^1.0.0",
+    "@opentelemetry/exporter-collector": "^0.25.0",
+    "@opentelemetry/exporter-otlp-http": "^0.26.0",
     "@opentelemetry/instrumentation": "^0.26.0",
     "@opentelemetry/instrumentation-document-load": "^0.26.0",
     "@opentelemetry/instrumentation-fetch": "^0.26.0",
     "@opentelemetry/instrumentation-user-interaction": "^0.26.0",
     "@opentelemetry/sdk-trace-base": "^1.0.0",
-    "@opentelemetry/sdk-trace-web": "^1.0.0",
-    "output": "^0.0.0"
+    "@opentelemetry/sdk-trace-web": "^1.0.0"
   },
   "devDependencies": {
     "concurrently": "^6.3.0",
