--- a/examples/browser-tracing-example/package.json
+++ b/examples/browser-tracing-example/package.json
@@ -11,6 +11,7 @@
     "@opentelemetry/instrumentation-document-load": "^0.26.0",
     "@opentelemetry/instrumentation-fetch": "^0.26.0",
     "@opentelemetry/instrumentation-user-interaction": "^0.26.0",
+    "@opentelemetry/propagator-b3": "^1.0.0",
     "@opentelemetry/sdk-trace-base": "^1.0.0",
     "@opentelemetry/sdk-trace-web": "^1.0.0"
   },
