--- a/examples/node-server-example/package.json
+++ b/examples/node-server-example/package.json
@@ -3,6 +3,7 @@
     "@opentelemetry/context-zone": "^1.0.0",
     "@opentelemetry/exporter-collector": "^0.25.0",
     "@opentelemetry/instrumentation": "^0.26.0",
+    "@opentelemetry/instrumentation-http": "^0.26.0",
     "@opentelemetry/sdk-node": "^0.26.0",
     "@opentelemetry/sdk-trace-node": "^1.0.0"
   }
